--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,38 +41,31 @@ jobs:
           python-version: ${{ matrix.python-version }}
           architecture: x64
 
-      - name: Install poetry
-        uses: abatilo/actions-poetry@v2.0.0
+      - name: Set up uv
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+      - name: Restore uv cache
+        uses: actions/cache@v4
         with:
-          poetry-version: 1.2.2
-
-      - name: Set up cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
+          path: /tmp/.uv-cache
+          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
           restore-keys: |
-            ${{ runner.os }}-poetry-
+            uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+            uv-${{ runner.os }}
 
       - name: Install dependencies
-        run: poetry install -E parse
-
-      - name: Install snowflake
-        if: ${{ matrix.sqlalchemy-version == '1.4.0' && matrix.python-version != '3.8.0' }}
-        run: |
-          poetry run pip install 'snowflake-sqlalchemy'
+        run: make install
 
       - name: Install specific sqlalchemy version
         run: |
-          poetry run pip install 'sqlalchemy~=${{ matrix.sqlalchemy-version }}'
+          uv pip install 'sqlalchemy~=${{ matrix.sqlalchemy-version }}'
 
       - if: ${{ matrix.sqlalchemy-version == '1.4.0' }}
-        run: poetry run make lint
+        run: make lint
 
       - env:
           PMR_POSTGRES_DRIVERNAME: ${{ matrix.postgres-drivername }}
           SQLALCHEMY_WARN_20: 1
-        run: poetry run make test
+        run: make test
 
       - name: Store test result artifacts
         uses: actions/upload-artifact@v3
